k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextjs-app
  labels:
    name: nextjs-app
    app: nextjs-app
