k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: nextjs-app
  labels:
    app: nextjs-app
spec:
  type: LoadBalancer
  selector:
    app: nextjs-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
